--- a/tp.html
+++ b/tp.html
@@ -6,11 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="./portfolio.css" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
-    />
     <link rel="stylesheet" href="./tp.css">
 </head>
 <body>
@@ -68,7 +63,7 @@
             </div>
         </div>
         <div class="project-card">
-            <img src=".//assets/project2.gif" />
+            <img src="./assets/project2.gif" />
             <div class="project-content">
                 <button class="card-btn btn2">Project Link</button>
                 <button class="card-btn btn2">Project Code</button>
