--- a/tp.html
+++ b/tp.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./tp.css">
+    <link rel="stylesheet" href="./logo.jpg" />
 </head>
 <body>
     <div class="hero-section">
         <div class="main-head">
             <div>
-                <img src="./assets/logo.jpg" style="height: 100px; width: 110px" />
+                <img src="./logo.jpg" style="height: 100px; width: 110px" />
             </div>
             <nav>
                 <button class="button btn1" ><a href="#About">About</a></button>
@@ -29,7 +29,7 @@
                 I design and code beautifully simple things, and I love what I do.
             </p>
             <div class="hero-img">
-                <img src="./assets/hero.png" style="height: 250px; width: 250px" />
+                <img src="./hero.png" style="height: 250px; width: 250px" />
             </div>
         </div>
     </div>
@@ -55,21 +55,21 @@
 
     <div class="main-card">
         <div class="project-card" id="My Projects">
-            <img src="./assets/project1.jpg" />
+            <img src="./project1.jpg" />
             <div class="project-content">
                 <button class="card-btn btn2">Project Link</button>
                 <button class="card-btn btn2">Project Code</button>
             </div>
         </div>
         <div class="project-card">
-            <img src="./assets/project2.gif" />
+            <img src="./project2.gif" />
             <div class="project-content">
                 <button class="card-btn btn2">Project Link</button>
                 <button class="card-btn btn2">Project Code</button>
             </div>
         </div>
         <div class="project-card">
-            <img src="./assets/project3.gif" />
+            <img src="./project2.jpg" />
             <div class="project-content">
                 <button class="card-btn btn2">Project Link</button>
                 <button class="card-btn btn2">Project Code</button>
